# honeybadger-rs

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
examples/: chained_error.rs  failure_error.rs  std_error.rs
src/: errors.rs  honeybadger.rs  lib.rs  notice.rs
