[package]
name = "honeybadger"
version = "0.1.0"
authors = ["Niel Drummond <niel@drummond.lu>"]
description = "A Honeybadger client for rust"
license = "MIT"

[dependencies]
error-chain = "0.12.0"
http = "0.1.7"
hyper = "0.12.5"
hyper-tls = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.2.2"
backtrace = "0.3.9"
hostname = "0.1.5"
os_type = "1.0.0"
tokio = "0.1.7"
native-tls = "0.2.0"
futures = "0.1.21"
log = "0.4"

[dev-dependencies]
yup-hyper-mock = "3.12"
