[package]
name = "honeybadger"
version = "0.2.1"
authors = ["Niel Drummond <niel@drummond.lu>"]
description = "A Honeybadger client for rust"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
error-chain = "0.12.1"
failure = "0.1.3"
http = "0.1.14"
hyper = "0.12.18"
hyper-tls = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.2"
backtrace = "0.3.13"
hostname = "0.1.5"
os_type = "2.2.0"
tokio = "0.1.15"
futures = "0.1.27"
log = "0.4"

[dev-dependencies]
yup-hyper-mock = "3.12"

[badges]
circle-ci = { repository = "fussybeaver/honeybadger-rs" }
