[package]
name = "honeybadger"
version = "0.3.0"
authors = ["Niel Drummond <niel@drummond.lu>"]
description = "A Honeybadger client for rust"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"

[dependencies]
error-chain = "0.12.1"
failure = "0.1.6"
http = "0.2.0"
hyper = "0.13.1"
hyper-tls = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1.0"
backtrace = "0.3.40"
hostname = "0.3.0"
os_type = "2.2.0"
tokio = "0.2.6"
futures = "0.1.29"
log = "0.4"
mockito = "0.20.0"

[badges]
circle-ci = { repository = "fussybeaver/honeybadger-rs" }
